Add server setup, authentication features, and environment configuration
- Introduced server-side functionality with Express and MSSQL integration.
- Added user authentication routes for signup and login with JWT.
- Created environment variable management for database and API configurations.
- Updated .gitignore to exclude sensitive files and added README setup guide.
- Enhanced frontend components with localized text and improved styling.

--- a/anasayfa/code.html
+++ b/anasayfa/code.html
@@ -94,7 +94,7 @@
 <div class="flex flex-col space-y-12 py-10">
 <!-- Carousel: Bugünün Top 10 Türkiye'de -->
 <section>
-<h3 class="px-4 text-xl font-bold text-white sm:px-6 md:px-10 lg:px-16 mb-2">Bugünün Top 10 Türkiye'de</h3>
+<h3 class="px-4 text-xl font-bold text-white sm:px-6 md:px-10 lg:px-16 mb-2">Türkiye'de Top 10 Filmler</h3>
 <div class="relative">
 <div class="overflow-x-auto [-ms-scrollbar-style:none] [scrollbar-width:none] [&amp;::-webkit-scrollbar]:hidden">
 <div class="flex items-stretch gap-3 px-4 sm:px-6 md:px-10 lg:px-16">
