Fix GitHub Pages deployment - update 404.html and add keep_files: false

--- a/public/404.html
+++ b/public/404.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Redirecting...</title>
+    <link rel="icon" type="image/svg+xml" href="/Dizimey/assets/icon-BzVLbKlM.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dizimey - Redirecting...</title>
   </head>
   <body>
+    <div id="root"></div>
     <script>
+      // Redirect to index.html with correct base path
       var redirect = '/Dizimey/index.html' + window.location.search + window.location.hash;
       window.location.replace(redirect);
     </script>
